# champion

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
advocate/: api.py
champion/: __init__.py  adapters.py  addrvalidator.py  api.py  connection.py  connectionpool.py  exceptions.py  futures.py  poolmanager.py
tests/: __init__.py  conftest.py  test_addrvalidator.py  test_api.py  test_connection.py  test_integration.py
