[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "champion"
version = "1.0.0"
description = "A requests wrapper that prevents SSRF attacks - modernized fork of Advocate"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jordan Milne", email = "jordan@jordanmilne.ca" },
    { name = "Gee19" },
]
maintainers = [
    { name = "Gee19" },
]
keywords = [
    "ssrf",
    "security",
    "requests",
    "http",
    "networking",
    "safety",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.30.0",
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
netifaces = [
    "netifaces>=0.10.5",
]
futures = [
    "requests-futures>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "responses>=0.25.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "types-requests>=2.31",
    "requests-futures>=1.0.0",
    "netifaces>=0.10.5",
]

[project.urls]
Homepage = "https://github.com/Gee19/champion"
Documentation = "https://github.com/Gee19/champion#readme"
Repository = "https://github.com/Gee19/champion.git"
Issues = "https://github.com/Gee19/champion/issues"
Changelog = "https://github.com/Gee19/champion/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["champion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "network: tests that require network access",
]

[tool.coverage.run]
source = ["champion"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["champion"]
